# family-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKLOG.md  BUGS.md  CADDY_ROBUSTNESS_RUNBOOK.md  Caddyfile  DESKTOP_SETUP.md  Dockerfile  OPERATIONS.md  PRD_AND_ROADMAP.md  README.md  SETUP.md  USER_GUIDE.md  alembic.ini  compose.cloud.yml  compose.yml  family_assistant_prd.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_family_members.py  0003_grocery_items.py  0004_meal_plan_entries.py  0005_lunch_plan_entries.py  0006_exercise_entries.py  0007_session_csrf_token.py  0008_memories.py  0009_lunch_plan_items_jsonb.py  0010_user_name.py  0011_assistant_interactions.py  0012_assistant_reply.py  0013_exercise_redesign.py  0014_grocery_quantity_decimal.py  0015_interaction_traces.py  0016_recipes.py  0017_recipe_instructions.py  0018_blood_pressure_readings.py  0019_hikes.py  0020_household_tasks.py  (+4 more)
scripts/: build_natal_facts.py  db-backup.sh  deploy.sh  doctor.sh  family.sh  rollback.sh  seed_bp.py  seed_exercises.py  seed_hikes.py  seed_recipes.py
sites/: README.md
tests/: conftest.py  test_ai_gateway.py  test_assistant.py  test_auth.py  test_bp.py  test_dashboard.py  test_exercise.py  test_family_member.py  test_grocery.py  test_hike.py  test_horoscope.py  test_household_task.py  test_lessons.py  test_llm_mock.py  test_llm_providers.py  test_lunch_plan.py  test_meal_plan.py  test_memory.py  test_migrations.py  test_projects.py  test_prompt_examples.py  test_recipe.py  test_settings_bootstrap.py
(+126 files in other folders)
