[project]
name = "family-assistant"
version = "0.1.0"
description = "Household management web app with an embedded AI assistant. Personal project for one household. See PRD_AND_ROADMAP.md."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Sam Mohan" },
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "skyfield>=1.54",
    "skyfield-data>=7.0.0",
    "lunardate>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/family_assistant"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
